对接主工程

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Assets\Scripts\YFramework\Core\Common\Interface\Converter\IDataConverter.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\PoolModule\ClassPoolModule\PoolData\List\Entity\ListData.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Utility\Utility.Directory.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\Init\ChildController\Process\LoadHotVersionProcess.cs" />
     <Compile Include="Assets\Scripts\Core\Model\MainModel\MainModel.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Utility\Utility.MicroPhoneTools.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\ToTween\Base\FatherBase\BaseToTween.cs" />
@@ -84,7 +85,7 @@
     <Compile Include="Assets\Scripts\YFramework\Core\MVC\Controller\Controller\BaseController.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\FSM\FSM\BaseFSM.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\PoolModule\GameObjectPoolModule\Base\IGameObjectPoolTarget.cs" />
-    <Compile Include="Assets\Scripts\Core\Tools\Log\UnityDebug.cs" />
+    <Compile Include="Assets\Scripts\Core\Helper\Log\UnityLogHelper.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Utility\Utility.CompressTools.cs" />
     <Compile Include="Assets\Scripts\Core\Mono\UI\InputField\CustomInputField.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Utility\Utility.BinaryMapper.cs" />
@@ -106,7 +107,6 @@
     <Compile Include="Assets\Scripts\Core\Model\Custom\BaseCustomChildModel.cs" />
     <Compile Include="Assets\Scripts\Core\Scene\BaseCustomScene.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\ECSModule\System\BaseECSSystem.cs" />
-    <Compile Include="Assets\Scripts\Core\UI\TipsUI\CommonTipsUI\CommonInputTipsUI.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Extend\GameObjectExtend.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\ToTween\Extend\Transform\Scale\ToTweenExtend.cs" />
     <Compile Include="Assets\Scripts\Core\Module\ReflectionDataModule\UserData\Data\CallBackData\Core\UserDataCallBack.cs" />
@@ -122,10 +122,12 @@
     <Compile Include="Assets\Scripts\YFramework\Core\DesignPattern\ObserverPattern\Subject\BaseSubject.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Manager\SceneManager\BaseScene.cs" />
     <Compile Include="Assets\Scripts\Core\Helper\XiaoYuanYFrameworkHelper.cs" />
+    <Compile Include="Assets\Scripts\Core\Manager\BridgeManager\PackageBridgeManager.cs" />
     <Compile Include="Assets\Scripts\Core\Manager\HttpManager\HttpRequest\Core_T\SpriteHttpRequest.cs" />
     <Compile Include="Assets\Scripts\Core\Tools\RecordTools\RecordData.cs" />
     <Compile Include="Assets\Scripts\Core\Module\HotFixModule\MD5\BaseMD5.cs" />
     <Compile Include="Assets\Scripts\Core\Scene\Scene\InitScene.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\Init\ChildController\Process\LoadHotConfigProcess.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\UI\TipsUI\Tips\ITipsUI.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\MVC\Controller\ChildController\IChildController.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Utility\Utility.BesierLineTools.cs" />
@@ -138,12 +140,15 @@
     <Compile Include="Assets\Scripts\YFramework\Core\Extend\DateTimeExtend.cs" />
     <Compile Include="Assets\Scripts\Core\Model\InitModel\InitModel.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\DesignPattern\ObserverPattern\Observer\BaseObserver.cs" />
+    <Compile Include="Assets\Scripts\YFramework\Core\Module\LogModule\LogHelper.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\MVC\Controller\ChildController\BaseChildController.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Manager\SocketManager\Udp\BigData\UdpBigData.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\DataStructure\MultiTree\MultiTreeNode.cs" />
     <Compile Include="Assets\Scripts\Core\Module\HotFixModule\Data\HotFixData.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\DataModule\List\ListModule.cs" />
+    <Compile Include="Assets\Scripts\Core\Manager\BridgeManager\PackageBridgeMono.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Extend\ByteExtend.cs" />
+    <Compile Include="Assets\Scripts\Core\Tools\AppTools\Scene\AppTools.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Extend\UIExtend.cs" />
     <Compile Include="Assets\Scripts\Core\Manager\HttpManager\HttpRequest\Core\SpriteHttpRequest.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\LockStepModule\FixedData\Fix64\Fix64.cs" />
@@ -154,12 +159,13 @@
     <Compile Include="Assets\Scripts\YFramework\Core\UI\Custom\ActionButton.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\MVC\Canvas\BaseCanvas.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\MVC\Model\Model\BaseModel.cs" />
+    <Compile Include="Assets\Scripts\Core\UI\TipsUI\CommonOneSelectTipUI.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Common\Interface\Map\IMap.cs" />
     <Compile Include="Assets\Scripts\Core\Tools\BatTools\BatTools.cs" />
     <Compile Include="Assets\Scripts\Core\Module\AssetBundleModule\AssetBundleData\AssetBundleItem.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Utility\Utility.EndPointTools.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\Init\ChildController\Condition\LoadOssCondition.cs" />
     <Compile Include="Assets\Scripts\Core\Module\HotFixModule\Windows\HotFixWindows.cs" />
-    <Compile Include="Assets\Scripts\Core\UI\TipsUI\CommonTipsUI\CommonOneSelectTipUI.cs" />
     <Compile Include="Assets\Scripts\Core\Model\LoginModel\LoginModel.cs" />
     <Compile Include="Assets\Scripts\Core\UI\Canvas\Core\InitCanvas.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\ToTween\Extend\Transform\LocalEuler\ToTweenExtend.cs" />
@@ -167,7 +173,6 @@
     <Compile Include="Assets\Scripts\Core\Module\AssetBundleModule\AssetBundleData\AssetBundleConfigData.cs" />
     <Compile Include="Assets\Scripts\Core\Extend\StringExtend.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\ToTween\Extend\Transform\Position\ToTweenExtend.cs" />
-    <Compile Include="Assets\Scripts\Core\Tools\Resources\MyResources.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\DataStructure\DoubleLinkedList\DoubleLinkedNode.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\DesignPattern\ObserverPattern\Observer\IObserver.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Manager\SceneManager\SceneManager.cs" />
@@ -188,7 +193,9 @@
     <Compile Include="Assets\Scripts\Core\Data\Data\CommonData\CommonConstData.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Common\Interface\Collection\ICollectionContain.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Common\Interface\Operator\IResume.cs" />
+    <Compile Include="Assets\Scripts\Core\Helper\Resources\ResourceHelper.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Utility\Utility.PhysicsTools.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\Init\ChildController\LoadMainFileChildController.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\LockStepModule\FixedData\Fix32\Fix32Vector2.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Utility\Utility.HttpTools.cs" />
     <Compile Include="Assets\Scripts\Core\Model\Custom\BaseCustomThreeDModel.cs" />
@@ -197,7 +204,9 @@
     <Compile Include="Assets\Scripts\YFramework\Core\Manager\SocketManager\Udp\UdpRequestHandleManager.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Extend\StringExtend.cs" />
     <Compile Include="Assets\Scripts\Core\Scene\SceneID.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\Init\ChildController\Process\LoadHotFileProcess.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\PoolModule\ClassPoolModule\PoolData\Dictionary\Entity\DictionaryData.cs" />
+    <Compile Include="Assets\Scripts\Core\Tools\AppTools\System\AppTools.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Utility\Utility.DictionaryTools.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\PoolModule\ClassPoolModule\PoolData\List\Base\BaseListData.cs" />
     <Compile Include="Assets\Scripts\Core\Tools\OssTools\Data\OssConfig.cs" />
@@ -214,12 +223,14 @@
     <Compile Include="Assets\Scripts\YFramework\Core\Module\ToTween\Entity\Rotation\Rotation\ToLocalQuaternionTween.cs" />
     <Compile Include="Assets\Scripts\Core\Scene\Scene\MainScene.cs" />
     <Compile Include="Assets\Scripts\Core\Tools\OssTools\AliyunOSSTools.cs" />
+    <Compile Include="Assets\Scripts\Core\Manager\BridgeManager\Data\BridgeData.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\DataModule\List\ListPoolModule.cs" />
     <Compile Include="Assets\Scripts\Core\Manager\HttpManager\HttpRequest\Base\BaseHttpRequest.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Common\Interface\Collection\ICollectionCount.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\AI\Path\Manager\NodeManager.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Manager\SocketManager\Udp\BigData\UdpBigDataManager.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Extend\CollectionExtend.cs" />
+    <Compile Include="Assets\Scripts\Core\UI\TipsUI\CommonTwoSelectTipUI.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\ToTween\Extend\Transform\LocalPosition\ToTweenExtend.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\AI\Path\Data\PathNode.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Utility\Utility.Yielders.cs" />
@@ -238,16 +249,17 @@
     <Compile Include="Assets\Scripts\YFramework\Core\Module\ToTween\Entity\Rotation\Rotation\ToQuaternionTween.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\DataModule\Dictionary\DictionaryModule.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Manager\SocketManager\Udp\BigData\UdpMsg.cs" />
-    <Compile Include="Assets\Scripts\YFramework\Core\Module\LogModule\Log.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Extend\ObjectExtend.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\ECSModule\Component\IECSComponent.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Utility\Utility.VersionTools.cs" />
+    <Compile Include="Assets\Scripts\YFramework\Core\Module\ProcessModule\ProcessManager\Base\BaseProcessManager.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\LockStepModule\Data\LockStepData.cs" />
     <Compile Include="Assets\Scripts\Core\UI\Canvas\Core\LoginCanvas.cs" />
     <Compile Include="Assets\Scripts\Core\Model\Common\Child\TwoDCameraChildModel.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Common\Abstractor\Count\BaseCount.cs" />
     <Compile Include="Assets\Scripts\Core\Data\Data\LayerData\LayerMaskData.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Manager\SocketManager\Tcp\RequestHandle\SocketMsg.cs" />
+    <Compile Include="Assets\Scripts\YFramework\Core\Module\ProcessModule\ProcessManager\T\ProcessManager.cs" />
     <Compile Include="Assets\Scripts\Core\Data\Data\SocketData\SocketVarData.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\MVC\Model\ChildModel\IChildModel.cs" />
     <Compile Include="Assets\Scripts\Core\Module\HotFixModule\HotFixEditor\HotFixEditor.cs" />
@@ -261,6 +273,7 @@
     <Compile Include="Assets\Scripts\Core\Tools\OssTools\Data\OssData.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\UndoModule\IUnDo.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\ECSModule\Component\BaseECSComponent.cs" />
+    <Compile Include="Assets\Scripts\Core\UI\TipsUI\HotVersionTipUI.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Utility\Utility.ListTools.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Manager\SocketManager\Udp\BigData\SocketData.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Main\Module\IModule.cs" />
@@ -279,17 +292,21 @@
     <Compile Include="Assets\Scripts\YFramework\Core\Module\ProcessModule\ProcessController\ProcessController.cs" />
     <Compile Include="Assets\Scripts\Core\Manager\LiveManager\Live\Base\ILive.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\IEnumeratorModule\IEnumeratorModule.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\Init\ChildController\Process\LoadOriginalVersionProcess.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Common\Interface\Collection\ICollectionDoubleAdd.cs" />
     <Compile Include="Assets\Scripts\Core\Module\AssetBundleModule\AssetBundleConfig\AssetBundleConfig.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\Init\ChildController\Process\LoadFileProcess.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Common\Interface\Collection\ICollectionDoubleMove.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\MVC\Canvas\ICanvas.cs" />
     <Compile Include="Assets\Scripts\Core\Data\Data\PathData\PathData.cs" />
     <Compile Include="Assets\Scripts\Core\Mono\UI\InputField\MultiInput.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\Init\ChildController\Process\LoadHotIntroduceProcess.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Utility\Utility.ConverterTools.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\AudioPlayerModule\AudioPlayerModule.cs" />
     <Compile Include="Assets\Scripts\Core\Data\Data\TagData\TagData.cs" />
     <Compile Include="Assets\Scripts\Core\UI\Custom\BaseCustomCanvas.cs" />
     <Compile Include="Assets\Scripts\Core\Module\HotFixModule\HotFixModule.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\Init\InitController.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\LockStepModule\FixedData\Fix32\Fix32Vector3.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Utility\Utility.XmlMapper.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\UI\TipsUI\Manager\TipsUIManager.cs" />
@@ -321,7 +338,9 @@
     <Compile Include="Assets\Scripts\Core\Main\GameCenter.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\BoardCastModule\BoardCastDelegate.cs" />
     <Compile Include="Assets\Scripts\Core\Module\AssetBundleModule\AssetBundleData\AssetBundleFileData.cs" />
+    <Compile Include="Assets\Scripts\YFramework\Core\Module\ProcessModule\ProcessManager\Base\IProcessManager.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Common\Interface\Life\Core\IOnDestory.cs" />
+    <Compile Include="Assets\Scripts\Core\Data\Data\ABAssetData\ABTag.cs" />
     <Compile Include="Assets\Scripts\Core\UI\Log\Core\MidLogUI.cs" />
     <Compile Include="Assets\Scripts\Core\Data\Data\AppData\AppData.cs" />
     <Compile Include="Assets\Scripts\Core\Tools\BuildTools\BuildData.cs" />
@@ -331,7 +350,7 @@
     <Compile Include="Assets\Scripts\YFramework\Core\Utility\Utility.ConvertDataTools.cs" />
     <Compile Include="Assets\Scripts\Core\Scene\XiaoYuanSceneManager.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Utility\Utility.MeshTools.cs" />
-    <Compile Include="Assets\Scripts\YFramework\Core\Module\ProcessModule\ProcessManager\ProcessManager.cs" />
+    <Compile Include="Assets\Scripts\YFramework\Core\Module\ProcessModule\ProcessManager\Normal\ProcessManager.cs" />
     <Compile Include="Assets\Scripts\Core\Pool\Data\PoolID.cs" />
     <Compile Include="Assets\Scripts\Core\Manager\HttpManager\Main\HttpManager.cs" />
     <Compile Include="Assets\Scripts\Core\Module\ReflectionDataModule\UserData\Data\CallBackData\Core\UserDataMap.cs" />
@@ -358,6 +377,7 @@
     <Compile Include="Assets\Scripts\YFramework\Core\Common\Interface\Operator\IPool.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\PoolModule\ClassPoolModule\ClassPool.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Mono\UI\Text\TextSpacing.cs" />
+    <Compile Include="Assets\Scripts\Core\Controller\Init\ChildController\Process\LoadConfigProcess.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Manager\SocketManager\Udp\BigData\PlatformType.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Extend\TypeExtend.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Main\Module\BaseModule.cs" />
@@ -372,12 +392,6 @@
     <Compile Include="Assets\Scripts\Core\Data\Data\SocketData\IPAddressConstData.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Extend\ToggleGroupExtend.cs" />
     <Compile Include="Assets\Scripts\YFramework\Core\Module\ToTween\Base\FatherBase\IToTween.cs" />
-    <Compile Include="Assets\Scripts\Core\Controller\Init\InitController.cs" />
-    <Compile Include="Assets\Scripts\Core\Controller\Init\ChildController\LoadAppOriginalFileChildController.cs" />
-    <Compile Include="Assets\Scripts\Core\UI\TipsUI\CommonTipsUI\CommonTwoSelectTipUI.cs" />
-    <Compile Include="Assets\Scripts\Core\Tools\AppTools\System\AppTools.cs" />
-    <Compile Include="Assets\Scripts\Core\Controller\Init\ChildController\LoadAppHotFileChildController.cs" />
-    <Compile Include="Assets\Scripts\Core\Tools\AppTools\Scene\AppTools.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Plugin\Aliyun\Aliyun.OSS.dll" />
